Phase 2 take 2/yac.output
Nonterminals useless in grammar

    PackageName


Terminals unused in grammar

    PreferToRightParen


State 42 conflicts: 1 shift/reduce
State 86 conflicts: 1 shift/reduce
State 100 conflicts: 5 shift/reduce
State 157 conflicts: 1 shift/reduce
State 163 conflicts: 5 shift/reduce
State 186 conflicts: 2 shift/reduce


Grammar

    0 $accept: s $end

    1 s: PackageClause ImportDeclarations TopLevelDeclarations

    2 PackageClause: KEYWORD_PACKAGE IDENTIFIER

    3 ImportDeclarations: ImportDeclaration ImportDeclarations
    4                   | empty

    5 ImportDeclaration: KEYWORD_IMPORT ImportSpecification
    6                  | KEYWORD_IMPORT '(' ImportSpecificationList ')'

    7 ImportSpecificationList: ImportSpecification ImportSpecificationList2

    8 ImportSpecificationList2: ImportSpecification ImportSpecificationList2
    9                         | %empty

   10 ImportSpecification: STRING_LITERAL
   11                    | '.' STRING_LITERAL
   12                    | IDENTIFIER STRING_LITERAL

   13 TopLevelDeclarations: TopLevelDeclaration TopLevelDeclarations
   14                     | %empty

   15 TopLevelDeclaration: Declaration
   16                    | KEYWORD_FUNC IDENTIFIER '(' ')' CodeBlock

   17 Declaration: ConstDeclaration
   18            | TypeDeclaration
   19            | VariableDeclaration

   20 ConstDeclaration: KEYWORD_CONST ConstSpecification
   21                 | KEYWORD_CONST '(' ConstSpecifications ')'

   22 ConstSpecifications: ConstSpecification
   23                    | ConstSpecifications ConstSpecification

   24 ConstSpecification: IdentifierList ConstIdList

   25 ConstIdList: PreConstIdList '=' ExpressionList

   26 PreConstIdList: Type
   27               | empty

   28 TypeDeclaration: KEYWORD_TYPE TypeSpecifications

   29 TypeSpecifications: TypeSpecification
   30                   | '(' TypeSpecificationList ')'

   31 TypeSpecificationList: TypeSpecification TypeSpecificationList
   32                      | %empty

   33 TypeSpecification: AliasDeclaration
   34                  | TypeDefinition

   35 AliasDeclaration: IDENTIFIER '=' Type

   36 TypeDefinition: IDENTIFIER Type

   37 VariableDeclaration: KEYWORD_VAR VariableSpecifications
   38                    | KEYWORD_VAR '(' VariableSpecifications ')'

   39 VariableSpecifications: VariableSpecification
   40                       | VariableSpecifications VariableSpecification

   41 VariableSpecification: IdentifierList VariableIdList

   42 VariableIdList: Type VariableIdListType
   43               | '=' ExpressionList

   44 VariableIdListType: '=' ExpressionList
   45                   | empty

   46 IdentifierList: IDENTIFIER
   47               | IDENTIFIER ',' IdentifierList

   48 Type: TypeName
   49     | '(' Type ')'

   50 TypeName: P_TYPE
   51         | QualifiedID

   52 QualifiedID: IDENTIFIER '.' IDENTIFIER

   53 ExpressionList: Expression
   54               | Expression ',' ExpressionList

   55 Expression: Expression LOGICAL_OR Expression
   56           | Expression LOGICAL_AND Expression
   57           | Expression RelationalOperation Expression
   58           | Expression AddOperation Expression
   59           | Expression MultipyOperation Expression
   60           | UnaryExpression

   61 RelationalOperation: REL_EQUAL
   62                    | REL_NEQUAL
   63                    | REL_LT
   64                    | REL_LEQ
   65                    | REL_GT
   66                    | REL_GEQ

   67 AddOperation: '+'
   68             | '-'
   69             | '|'
   70             | '^'

   71 MultipyOperation: '*'
   72                 | '/'
   73                 | '%'
   74                 | LSHIFT
   75                 | RSHIFT
   76                 | '&'
   77                 | AMPXOR

   78 UnaryOperation: '+'
   79               | '-'
   80               | '!'
   81               | '^'
   82               | '*'
   83               | '&'

   84 AssignOperation: ADD_ASSIGN
   85                | SUB_ASSIGN
   86                | OR_ASSIGN
   87                | XOR_ASSIGN
   88                | MUL_ASSIGN
   89                | DIV_ASSIGN
   90                | MOD_ASSIGN
   91                | AND_ASSIGN
   92                | LSHIFT_ASSIGN
   93                | RSHIFT_ASSIGN
   94                | AMPXOR_ASSIGN

   95 UnaryExpression: CHANNEL_ASSIGN UnaryExpression
   96                | UnaryOperation UnaryExpression
   97                | PrimaryExpression

   98 PrimaryExpression: Operand
   99                  | PrimaryExpression Index

  100 Index: '[' Expression ']'

  101 Operand: Literal
  102        | OperandName
  103        | '(' Expression ')'
  104        | P_NIL
  105        | P_BOOL

  106 Literal: BasicLiteral

  107 BasicLiteral: INT_LITERAL
  108             | FLOAT_LITERAL
  109             | STRING_LITERAL

  110 OperandName: IDENTIFIER
  111            | P_FUNCTION
  112            | QualifiedID

  113 $@1: %empty

  114 $@2: %empty

  115 CodeBlock: '{' $@1 Statements $@2 '}'

  116 Statements: Statements Statement
  117           | empty

  118 Statement: SimpleStatement
  119          | Declaration
  120          | ForStatement
  121          | SwitchStatement

  122 SimpleStatement: Expression
  123                | IncrementDecrement
  124                | Assignment
  125                | ShortDeclaration

  126 IncrementDecrement: Expression INC_ASSIGN
  127                   | Expression DEC_ASSIGN

  128 Assignment: ExpressionList '=' ExpressionList
  129           | ExpressionList AssignOperation ExpressionList

  130 ShortDeclaration: IdentifierList SHORT_DECLARATION ExpressionList

  131 ForStatement: KEYWORD_FOR ForClauseParent CodeBlock

  132 ForClauseParent: ForCondition
  133                | ForClause
  134                | RangeClause
  135                | empty

  136 ForCondition: Expression

  137 ForClause: ForClauseInit ';' ForClauseCondition ';' ForClauseUpdation

  138 ForClauseInit: InitializeStatement
  139              | empty

  140 ForClauseCondition: Expression

  141 ForClauseUpdation: UpdationStatement
  142                  | empty

  143 InitializeStatement: SimpleStatement

  144 UpdationStatement: SimpleStatement

  145 RangeClause: PreForRange KEYWORD_RANGE Expression

  146 PreForRange: ExpressionList '='
  147            | IdentifierList SHORT_DECLARATION
  148            | empty

  149 SwitchStatement: ExprSwitchStmt
  150                | TypeSwitchStmt

  151 ExprSwitchStmt: KEYWORD_SWITCH SimpleStatement '{' ExprCaseClauses '}'

  152 ExprCaseClauses: ExprCaseClauses ExprCaseClause
  153                | ExprCaseClause

  154 ExprCaseClause: ExprSwitchCase ':' Statements

  155 ExprSwitchCase: KEYWORD_CASE ExpressionList
  156               | KEYWORD_DEFAULT

  157 TypeSwitchStmt: KEYWORD_SWITCH TypeSwitchGuard '{' TypeCaseClauses '}'

  158 TypeSwitchGuard: IDENTIFIER SHORT_DECLARATION PrimaryExpression '.' '(' KEYWORD_TYPE ')'

  159 TypeCaseClauses: TypeCaseClauses TypeCaseClause
  160                | TypeCaseClause

  161 TypeCaseClause: TypeSwitchCase ':' Statements

  162 TypeSwitchCase: KEYWORD_CASE TypeList
  163               | KEYWORD_DEFAULT

  164 TypeList: Type
  165         | Type ',' TypeList

  166 empty: %empty


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 80
    '%' (37) 73
    '&' (38) 76 83
    '(' (40) 6 16 21 30 38 49 103 158
    ')' (41) 6 16 21 30 38 49 103 158
    '*' (42) 71 82
    '+' (43) 67 78
    ',' (44) 47 54 165
    '-' (45) 68 79
    '.' (46) 11 52 158
    '/' (47) 72
    ':' (58) 154 161
    ';' (59) 137
    '=' (61) 25 35 43 44 128 146
    '[' (91) 100
    ']' (93) 100
    '^' (94) 70 81
    '{' (123) 115 151 157
    '|' (124) 69
    '}' (125) 115 151 157
    error (256)
    STRING_LITERAL <char const *> (258) 10 11 12 109
    INT_LITERAL <int> (259) 107
    FLOAT_LITERAL <double> (260) 108
    IDENTIFIER <char const *> (261) 2 12 16 35 36 46 47 52 110 158
    LOGICAL_OR (262) 55
    LOGICAL_AND (263) 56
    LSHIFT (264) 74
    RSHIFT (265) 75
    AMPXOR (266) 77
    CHANNEL_ASSIGN (267) 95
    REL_EQUAL <char const *> (268) 61
    REL_NEQUAL <char const *> (269) 62
    REL_LT <char const *> (270) 63
    REL_LEQ <char const *> (271) 64
    REL_GT <char const *> (272) 65
    REL_GEQ <char const *> (273) 66
    ADD_ASSIGN <char const *> (274) 84
    SUB_ASSIGN <char const *> (275) 85
    OR_ASSIGN <char const *> (276) 86
    XOR_ASSIGN <char const *> (277) 87
    MUL_ASSIGN <char const *> (278) 88
    DIV_ASSIGN <char const *> (279) 89
    MOD_ASSIGN <char const *> (280) 90
    AND_ASSIGN <char const *> (281) 91
    LSHIFT_ASSIGN <char const *> (282) 92
    RSHIFT_ASSIGN <char const *> (283) 93
    AMPXOR_ASSIGN <char const *> (284) 94
    INC_ASSIGN <char const *> (285) 126
    DEC_ASSIGN <char const *> (286) 127
    KEYWORD_PACKAGE (287) 2
    KEYWORD_IMPORT (288) 5 6
    KEYWORD_FUNC (289) 16
    KEYWORD_CONST (290) 20 21
    KEYWORD_TYPE (291) 28 158
    KEYWORD_VAR (292) 37 38
    KEYWORD_FOR (293) 131
    KEYWORD_RANGE (294) 145
    KEYWORD_DEFAULT (295) 156 163
    KEYWORD_CASE (296) 155 162
    KEYWORD_SWITCH (297) 151 157
    SHORT_DECLARATION (298) 130 147 158
    P_BOOL <char const *> (299) 105
    P_NIL (300) 104
    P_TYPE <char const *> (301) 50
    P_FUNCTION <char const *> (302) 111
    EMPTY (303)
    NORMAL (304)
    P_UNARY (305)
    PreferToRightParen (306)


Nonterminals, with rules where they appear

    $accept (72)
        on left: 0
    s (73)
        on left: 1
        on right: 0
    PackageClause (74)
        on left: 2
        on right: 1
    ImportDeclarations (75)
        on left: 3 4
        on right: 1 3
    ImportDeclaration (76)
        on left: 5 6
        on right: 3
    ImportSpecificationList (77)
        on left: 7
        on right: 6
    ImportSpecificationList2 (78)
        on left: 8 9
        on right: 7 8
    ImportSpecification (79)
        on left: 10 11 12
        on right: 5 7 8
    TopLevelDeclarations (80)
        on left: 13 14
        on right: 1 13
    TopLevelDeclaration (81)
        on left: 15 16
        on right: 13
    Declaration (82)
        on left: 17 18 19
        on right: 15 119
    ConstDeclaration (83)
        on left: 20 21
        on right: 17
    ConstSpecifications (84)
        on left: 22 23
        on right: 21 23
    ConstSpecification (85)
        on left: 24
        on right: 20 22 23
    ConstIdList (86)
        on left: 25
        on right: 24
    PreConstIdList (87)
        on left: 26 27
        on right: 25
    TypeDeclaration (88)
        on left: 28
        on right: 18
    TypeSpecifications (89)
        on left: 29 30
        on right: 28
    TypeSpecificationList (90)
        on left: 31 32
        on right: 30 31
    TypeSpecification (91)
        on left: 33 34
        on right: 29 31
    AliasDeclaration (92)
        on left: 35
        on right: 33
    TypeDefinition (93)
        on left: 36
        on right: 34
    VariableDeclaration (94)
        on left: 37 38
        on right: 19
    VariableSpecifications (95)
        on left: 39 40
        on right: 37 38 40
    VariableSpecification <struct node *> (96)
        on left: 41
        on right: 39 40
    VariableIdList <struct node *> (97)
        on left: 42 43
        on right: 41
    VariableIdListType <struct node *> (98)
        on left: 44 45
        on right: 42
    IdentifierList <struct node *> (99)
        on left: 46 47
        on right: 24 41 47 130 147
    Type <struct node *> (100)
        on left: 48 49
        on right: 26 35 36 42 49 164 165
    TypeName <struct node *> (101)
        on left: 50 51
        on right: 48
    QualifiedID <struct node *> (102)
        on left: 52
        on right: 51 112
    ExpressionList <struct node *> (103)
        on left: 53 54
        on right: 25 43 44 54 128 129 130 146 155
    Expression <struct node *> (104)
        on left: 55 56 57 58 59 60
        on right: 53 54 55 56 57 58 59 100 103 122 126 127 136 140 145
    RelationalOperation <struct node *> (105)
        on left: 61 62 63 64 65 66
        on right: 57
    AddOperation <struct node *> (106)
        on left: 67 68 69 70
        on right: 58
    MultipyOperation <struct node *> (107)
        on left: 71 72 73 74 75 76 77
        on right: 59
    UnaryOperation <struct node *> (108)
        on left: 78 79 80 81 82 83
        on right: 96
    AssignOperation <struct node *> (109)
        on left: 84 85 86 87 88 89 90 91 92 93 94
        on right: 129
    UnaryExpression <struct node *> (110)
        on left: 95 96 97
        on right: 60 95 96
    PrimaryExpression <struct node *> (111)
        on left: 98 99
        on right: 97 99 158
    Index (112)
        on left: 100
        on right: 99
    Operand <struct node *> (113)
        on left: 101 102 103 104 105
        on right: 98
    Literal <struct node *> (114)
        on left: 106
        on right: 101
    BasicLiteral <struct node *> (115)
        on left: 107 108 109
        on right: 106
    OperandName <struct node *> (116)
        on left: 110 111 112
        on right: 102
    CodeBlock (117)
        on left: 115
        on right: 16 131
    $@1 (118)
        on left: 113
        on right: 115
    $@2 (119)
        on left: 114
        on right: 115
    Statements (120)
        on left: 116 117
        on right: 115 116 154 161
    Statement (121)
        on left: 118 119 120 121
        on right: 116
    SimpleStatement (122)
        on left: 122 123 124 125
        on right: 118 143 144 151
    IncrementDecrement (123)
        on left: 126 127
        on right: 123
    Assignment <struct node *> (124)
        on left: 128 129
        on right: 124
    ShortDeclaration (125)
        on left: 130
        on right: 125
    ForStatement (126)
        on left: 131
        on right: 120
    ForClauseParent (127)
        on left: 132 133 134 135
        on right: 131
    ForCondition (128)
        on left: 136
        on right: 132
    ForClause (129)
        on left: 137
        on right: 133
    ForClauseInit (130)
        on left: 138 139
        on right: 137
    ForClauseCondition (131)
        on left: 140
        on right: 137
    ForClauseUpdation (132)
        on left: 141 142
        on right: 137
    InitializeStatement (133)
        on left: 143
        on right: 138
    UpdationStatement (134)
        on left: 144
        on right: 141
    RangeClause (135)
        on left: 145
        on right: 134
    PreForRange (136)
        on left: 146 147 148
        on right: 145
    SwitchStatement (137)
        on left: 149 150
        on right: 121
    ExprSwitchStmt (138)
        on left: 151
        on right: 149
    ExprCaseClauses (139)
        on left: 152 153
        on right: 151 152
    ExprCaseClause (140)
        on left: 154
        on right: 152 153
    ExprSwitchCase (141)
        on left: 155 156
        on right: 154
    TypeSwitchStmt (142)
        on left: 157
        on right: 150
    TypeSwitchGuard (143)
        on left: 158
        on right: 157
    TypeCaseClauses (144)
        on left: 159 160
        on right: 157 159
    TypeCaseClause (145)
        on left: 161
        on right: 159 160
    TypeSwitchCase (146)
        on left: 162 163
        on right: 161
    TypeList (147)
        on left: 164 165
        on right: 162 165
    empty (148)
        on left: 166
        on right: 4 27 45 117 135 139 142 148


State 0

    0 $accept: . s $end

    KEYWORD_PACKAGE  shift, and go to state 1

    s              go to state 2
    PackageClause  go to state 3


State 1

    2 PackageClause: KEYWORD_PACKAGE . IDENTIFIER

    IDENTIFIER  shift, and go to state 4


State 2

    0 $accept: s . $end

    $end  shift, and go to state 5


State 3

    1 s: PackageClause . ImportDeclarations TopLevelDeclarations

    KEYWORD_IMPORT  shift, and go to state 6

    $default  reduce using rule 166 (empty)

    ImportDeclarations  go to state 7
    ImportDeclaration   go to state 8
    empty               go to state 9


State 4

    2 PackageClause: KEYWORD_PACKAGE IDENTIFIER .

    $default  reduce using rule 2 (PackageClause)


State 5

    0 $accept: s $end .

    $default  accept


State 6

    5 ImportDeclaration: KEYWORD_IMPORT . ImportSpecification
    6                  | KEYWORD_IMPORT . '(' ImportSpecificationList ')'

    STRING_LITERAL  shift, and go to state 10
    IDENTIFIER      shift, and go to state 11
    '('             shift, and go to state 12
    '.'             shift, and go to state 13

    ImportSpecification  go to state 14


State 7

    1 s: PackageClause ImportDeclarations . TopLevelDeclarations

    KEYWORD_FUNC   shift, and go to state 15
    KEYWORD_CONST  shift, and go to state 16
    KEYWORD_TYPE   shift, and go to state 17
    KEYWORD_VAR    shift, and go to state 18

    $default  reduce using rule 14 (TopLevelDeclarations)

    TopLevelDeclarations  go to state 19
    TopLevelDeclaration   go to state 20
    Declaration           go to state 21
    ConstDeclaration      go to state 22
    TypeDeclaration       go to state 23
    VariableDeclaration   go to state 24


State 8

    3 ImportDeclarations: ImportDeclaration . ImportDeclarations

    KEYWORD_IMPORT  shift, and go to state 6

    $default  reduce using rule 166 (empty)

    ImportDeclarations  go to state 25
    ImportDeclaration   go to state 8
    empty               go to state 9


State 9

    4 ImportDeclarations: empty .

    $default  reduce using rule 4 (ImportDeclarations)


State 10

   10 ImportSpecification: STRING_LITERAL .

    $default  reduce using rule 10 (ImportSpecification)


State 11

   12 ImportSpecification: IDENTIFIER . STRING_LITERAL

    STRING_LITERAL  shift, and go to state 26


State 12

    6 ImportDeclaration: KEYWORD_IMPORT '(' . ImportSpecificationList ')'

    STRING_LITERAL  shift, and go to state 10
    IDENTIFIER      shift, and go to state 11
    '.'             shift, and go to state 13

    ImportSpecificationList  go to state 27
    ImportSpecification      go to state 28


State 13

   11 ImportSpecification: '.' . STRING_LITERAL

    STRING_LITERAL  shift, and go to state 29


State 14

    5 ImportDeclaration: KEYWORD_IMPORT ImportSpecification .

    $default  reduce using rule 5 (ImportDeclaration)


State 15

   16 TopLevelDeclaration: KEYWORD_FUNC . IDENTIFIER '(' ')' CodeBlock

    IDENTIFIER  shift, and go to state 30


State 16

   20 ConstDeclaration: KEYWORD_CONST . ConstSpecification
   21                 | KEYWORD_CONST . '(' ConstSpecifications ')'

    IDENTIFIER  shift, and go to state 31
    '('         shift, and go to state 32

    ConstSpecification  go to state 33
    IdentifierList      go to state 34


State 17

   28 TypeDeclaration: KEYWORD_TYPE . TypeSpecifications

    IDENTIFIER  shift, and go to state 35
    '('         shift, and go to state 36

    TypeSpecifications  go to state 37
    TypeSpecification   go to state 38
    AliasDeclaration    go to state 39
    TypeDefinition      go to state 40


State 18

   37 VariableDeclaration: KEYWORD_VAR . VariableSpecifications
   38                    | KEYWORD_VAR . '(' VariableSpecifications ')'

    IDENTIFIER  shift, and go to state 31
    '('         shift, and go to state 41

    VariableSpecifications  go to state 42
    VariableSpecification   go to state 43
    IdentifierList          go to state 44


State 19

    1 s: PackageClause ImportDeclarations TopLevelDeclarations .

    $default  reduce using rule 1 (s)


State 20

   13 TopLevelDeclarations: TopLevelDeclaration . TopLevelDeclarations

    KEYWORD_FUNC   shift, and go to state 15
    KEYWORD_CONST  shift, and go to state 16
    KEYWORD_TYPE   shift, and go to state 17
    KEYWORD_VAR    shift, and go to state 18

    $default  reduce using rule 14 (TopLevelDeclarations)

    TopLevelDeclarations  go to state 45
    TopLevelDeclaration   go to state 20
    Declaration           go to state 21
    ConstDeclaration      go to state 22
    TypeDeclaration       go to state 23
    VariableDeclaration   go to state 24


State 21

   15 TopLevelDeclaration: Declaration .

    $default  reduce using rule 15 (TopLevelDeclaration)


State 22

   17 Declaration: ConstDeclaration .

    $default  reduce using rule 17 (Declaration)


State 23

   18 Declaration: TypeDeclaration .

    $default  reduce using rule 18 (Declaration)


State 24

   19 Declaration: VariableDeclaration .

    $default  reduce using rule 19 (Declaration)


State 25

    3 ImportDeclarations: ImportDeclaration ImportDeclarations .

    $default  reduce using rule 3 (ImportDeclarations)


State 26

   12 ImportSpecification: IDENTIFIER STRING_LITERAL .

    $default  reduce using rule 12 (ImportSpecification)


State 27

    6 ImportDeclaration: KEYWORD_IMPORT '(' ImportSpecificationList . ')'

    ')'  shift, and go to state 46


State 28

    7 ImportSpecificationList: ImportSpecification . ImportSpecificationList2

    STRING_LITERAL  shift, and go to state 10
    IDENTIFIER      shift, and go to state 11
    '.'             shift, and go to state 13

    $default  reduce using rule 9 (ImportSpecificationList2)

    ImportSpecificationList2  go to state 47
    ImportSpecification       go to state 48


State 29

   11 ImportSpecification: '.' STRING_LITERAL .

    $default  reduce using rule 11 (ImportSpecification)


State 30

   16 TopLevelDeclaration: KEYWORD_FUNC IDENTIFIER . '(' ')' CodeBlock

    '('  shift, and go to state 49


State 31

   46 IdentifierList: IDENTIFIER .
   47               | IDENTIFIER . ',' IdentifierList

    ','  shift, and go to state 50

    $default  reduce using rule 46 (IdentifierList)


State 32

   21 ConstDeclaration: KEYWORD_CONST '(' . ConstSpecifications ')'

    IDENTIFIER  shift, and go to state 31

    ConstSpecifications  go to state 51
    ConstSpecification   go to state 52
    IdentifierList       go to state 34


State 33

   20 ConstDeclaration: KEYWORD_CONST ConstSpecification .

    $default  reduce using rule 20 (ConstDeclaration)


State 34

   24 ConstSpecification: IdentifierList . ConstIdList

    IDENTIFIER  shift, and go to state 53
    P_TYPE      shift, and go to state 54
    '('         shift, and go to state 55

    $default  reduce using rule 166 (empty)

    ConstIdList     go to state 56
    PreConstIdList  go to state 57
    Type            go to state 58
    TypeName        go to state 59
    QualifiedID     go to state 60
    empty           go to state 61


State 35

   35 AliasDeclaration: IDENTIFIER . '=' Type
   36 TypeDefinition: IDENTIFIER . Type

    IDENTIFIER  shift, and go to state 53
    P_TYPE      shift, and go to state 54
    '('         shift, and go to state 55
    '='         shift, and go to state 62

    Type         go to state 63
    TypeName     go to state 59
    QualifiedID  go to state 60


State 36

   30 TypeSpecifications: '(' . TypeSpecificationList ')'

    IDENTIFIER  shift, and go to state 35

    $default  reduce using rule 32 (TypeSpecificationList)

    TypeSpecificationList  go to state 64
    TypeSpecification      go to state 65
    AliasDeclaration       go to state 39
    TypeDefinition         go to state 40


State 37

   28 TypeDeclaration: KEYWORD_TYPE TypeSpecifications .

    $default  reduce using rule 28 (TypeDeclaration)


State 38

   29 TypeSpecifications: TypeSpecification .

    $default  reduce using rule 29 (TypeSpecifications)


State 39

   33 TypeSpecification: AliasDeclaration .

    $default  reduce using rule 33 (TypeSpecification)


State 40

   34 TypeSpecification: TypeDefinition .

    $default  reduce using rule 34 (TypeSpecification)


State 41

   38 VariableDeclaration: KEYWORD_VAR '(' . VariableSpecifications ')'

    IDENTIFIER  shift, and go to state 31

    VariableSpecifications  go to state 66
    VariableSpecification   go to state 43
    IdentifierList          go to state 44


State 42

   37 VariableDeclaration: KEYWORD_VAR VariableSpecifications .
   40 VariableSpecifications: VariableSpecifications . VariableSpecification

    IDENTIFIER  shift, and go to state 31

    IDENTIFIER  [reduce using rule 37 (VariableDeclaration)]
    $default    reduce using rule 37 (VariableDeclaration)

    VariableSpecification  go to state 67
    IdentifierList         go to state 44


State 43

   39 VariableSpecifications: VariableSpecification .

    $default  reduce using rule 39 (VariableSpecifications)


State 44

   41 VariableSpecification: IdentifierList . VariableIdList

    IDENTIFIER  shift, and go to state 53
    P_TYPE      shift, and go to state 54
    '('         shift, and go to state 55
    '='         shift, and go to state 68

    VariableIdList  go to state 69
    Type            go to state 70
    TypeName        go to state 59
    QualifiedID     go to state 60


State 45

   13 TopLevelDeclarations: TopLevelDeclaration TopLevelDeclarations .

    $default  reduce using rule 13 (TopLevelDeclarations)


State 46

    6 ImportDeclaration: KEYWORD_IMPORT '(' ImportSpecificationList ')' .

    $default  reduce using rule 6 (ImportDeclaration)


State 47

    7 ImportSpecificationList: ImportSpecification ImportSpecificationList2 .

    $default  reduce using rule 7 (ImportSpecificationList)


State 48

    8 ImportSpecificationList2: ImportSpecification . ImportSpecificationList2

    STRING_LITERAL  shift, and go to state 10
    IDENTIFIER      shift, and go to state 11
    '.'             shift, and go to state 13

    $default  reduce using rule 9 (ImportSpecificationList2)

    ImportSpecificationList2  go to state 71
    ImportSpecification       go to state 48


State 49

   16 TopLevelDeclaration: KEYWORD_FUNC IDENTIFIER '(' . ')' CodeBlock

    ')'  shift, and go to state 72


State 50

   47 IdentifierList: IDENTIFIER ',' . IdentifierList

    IDENTIFIER  shift, and go to state 31

    IdentifierList  go to state 73


State 51

   21 ConstDeclaration: KEYWORD_CONST '(' ConstSpecifications . ')'
   23 ConstSpecifications: ConstSpecifications . ConstSpecification

    IDENTIFIER  shift, and go to state 31
    ')'         shift, and go to state 74

    ConstSpecification  go to state 75
    IdentifierList      go to state 34


State 52

   22 ConstSpecifications: ConstSpecification .

    $default  reduce using rule 22 (ConstSpecifications)


State 53

   52 QualifiedID: IDENTIFIER . '.' IDENTIFIER

    '.'  shift, and go to state 76


State 54

   50 TypeName: P_TYPE .

    $default  reduce using rule 50 (TypeName)


State 55

   49 Type: '(' . Type ')'

    IDENTIFIER  shift, and go to state 53
    P_TYPE      shift, and go to state 54
    '('         shift, and go to state 55

    Type         go to state 77
    TypeName     go to state 59
    QualifiedID  go to state 60


State 56

   24 ConstSpecification: IdentifierList ConstIdList .

    $default  reduce using rule 24 (ConstSpecification)


State 57

   25 ConstIdList: PreConstIdList . '=' ExpressionList

    '='  shift, and go to state 78


State 58

   26 PreConstIdList: Type .

    $default  reduce using rule 26 (PreConstIdList)


State 59

   48 Type: TypeName .

    $default  reduce using rule 48 (Type)


State 60

   51 TypeName: QualifiedID .

    $default  reduce using rule 51 (TypeName)


State 61

   27 PreConstIdList: empty .

    $default  reduce using rule 27 (PreConstIdList)


State 62

   35 AliasDeclaration: IDENTIFIER '=' . Type

    IDENTIFIER  shift, and go to state 53
    P_TYPE      shift, and go to state 54
    '('         shift, and go to state 55

    Type         go to state 79
    TypeName     go to state 59
    QualifiedID  go to state 60


State 63

   36 TypeDefinition: IDENTIFIER Type .

    $default  reduce using rule 36 (TypeDefinition)


State 64

   30 TypeSpecifications: '(' TypeSpecificationList . ')'

    ')'  shift, and go to state 80


State 65

   31 TypeSpecificationList: TypeSpecification . TypeSpecificationList

    IDENTIFIER  shift, and go to state 35

    $default  reduce using rule 32 (TypeSpecificationList)

    TypeSpecificationList  go to state 81
    TypeSpecification      go to state 65
    AliasDeclaration       go to state 39
    TypeDefinition         go to state 40


State 66

   38 VariableDeclaration: KEYWORD_VAR '(' VariableSpecifications . ')'
   40 VariableSpecifications: VariableSpecifications . VariableSpecification

    IDENTIFIER  shift, and go to state 31
    ')'         shift, and go to state 82

    VariableSpecification  go to state 67
    IdentifierList         go to state 44


State 67

   40 VariableSpecifications: VariableSpecifications VariableSpecification .

    $default  reduce using rule 40 (VariableSpecifications)


State 68

   43 VariableIdList: '=' . ExpressionList

    STRING_LITERAL  shift, and go to state 83
    INT_LITERAL     shift, and go to state 84
    FLOAT_LITERAL   shift, and go to state 85
    IDENTIFIER      shift, and go to state 86
    CHANNEL_ASSIGN  shift, and go to state 87
    P_BOOL          shift, and go to state 88
    P_NIL           shift, and go to state 89
    P_FUNCTION      shift, and go to state 90
    '+'             shift, and go to state 91
    '-'             shift, and go to state 92
    '^'             shift, and go to state 93
    '*'             shift, and go to state 94
    '&'             shift, and go to state 95
    '('             shift, and go to state 96
    '!'             shift, and go to state 97

    QualifiedID        go to state 98
    ExpressionList     go to state 99
    Expression         go to state 100
    UnaryOperation     go to state 101
    UnaryExpression    go to state 102
    PrimaryExpression  go to state 103
    Operand            go to state 104
    Literal            go to state 105
    BasicLiteral       go to state 106
    OperandName        go to state 107


State 69

   41 VariableSpecification: IdentifierList VariableIdList .

    $default  reduce using rule 41 (VariableSpecification)


State 70

   42 VariableIdList: Type . VariableIdListType

    '='  shift, and go to state 108

    $default  reduce using rule 166 (empty)

    VariableIdListType  go to state 109
    empty               go to state 110


State 71

    8 ImportSpecificationList2: ImportSpecification ImportSpecificationList2 .

    $default  reduce using rule 8 (ImportSpecificationList2)


State 72

   16 TopLevelDeclaration: KEYWORD_FUNC IDENTIFIER '(' ')' . CodeBlock

    '{'  shift, and go to state 111

    CodeBlock  go to state 112


State 73

   47 IdentifierList: IDENTIFIER ',' IdentifierList .

    $default  reduce using rule 47 (IdentifierList)


State 74

   21 ConstDeclaration: KEYWORD_CONST '(' ConstSpecifications ')' .

    $default  reduce using rule 21 (ConstDeclaration)


State 75

   23 ConstSpecifications: ConstSpecifications ConstSpecification .

    $default  reduce using rule 23 (ConstSpecifications)


State 76

   52 QualifiedID: IDENTIFIER '.' . IDENTIFIER

    IDENTIFIER  shift, and go to state 113


State 77

   49 Type: '(' Type . ')'

    ')'  shift, and go to state 114


State 78

   25 ConstIdList: PreConstIdList '=' . ExpressionList

    STRING_LITERAL  shift, and go to state 83
    INT_LITERAL     shift, and go to state 84
    FLOAT_LITERAL   shift, and go to state 85
    IDENTIFIER      shift, and go to state 86
    CHANNEL_ASSIGN  shift, and go to state 87
    P_BOOL          shift, and go to state 88
    P_NIL           shift, and go to state 89
    P_FUNCTION      shift, and go to state 90
    '+'             shift, and go to state 91
    '-'             shift, and go to state 92
    '^'             shift, and go to state 93
    '*'             shift, and go to state 94
    '&'             shift, and go to state 95
    '('             shift, and go to state 96
    '!'             shift, and go to state 97

    QualifiedID        go to state 98
    ExpressionList     go to state 115
    Expression         go to state 100
    UnaryOperation     go to state 101
    UnaryExpression    go to state 102
    PrimaryExpression  go to state 103
    Operand            go to state 104
    Literal            go to state 105
    BasicLiteral       go to state 106
    OperandName        go to state 107


State 79

   35 AliasDeclaration: IDENTIFIER '=' Type .

    $default  reduce using rule 35 (AliasDeclaration)


State 80

   30 TypeSpecifications: '(' TypeSpecificationList ')' .

    $default  reduce using rule 30 (TypeSpecifications)


State 81

   31 TypeSpecificationList: TypeSpecification TypeSpecificationList .

    $default  reduce using rule 31 (TypeSpecificationList)


State 82

   38 VariableDeclaration: KEYWORD_VAR '(' VariableSpecifications ')' .

    $default  reduce using rule 38 (VariableDeclaration)


State 83

  109 BasicLiteral: STRING_LITERAL .

    $default  reduce using rule 109 (BasicLiteral)


State 84

  107 BasicLiteral: INT_LITERAL .

    $default  reduce using rule 107 (BasicLiteral)


State 85

  108 BasicLiteral: FLOAT_LITERAL .

    $default  reduce using rule 108 (BasicLiteral)


State 86

   52 QualifiedID: IDENTIFIER . '.' IDENTIFIER
  110 OperandName: IDENTIFIER .

    '.'  shift, and go to state 76

    '.'       [reduce using rule 110 (OperandName)]
    $default  reduce using rule 110 (OperandName)


State 87

   95 UnaryExpression: CHANNEL_ASSIGN . UnaryExpression
